# EconomikaNews

./: .gitignore  Dockerfile  GUIA_PAGO_GEMINI.md  GUIA_RENDER_DEPLOY.md  GUIA_YOUTUBE_SHORTS.md  PRODUCT_BLUEPRINT.md  README.md  accounts.json  ai_handler.py  client_secrets.json  config_api.json  downloader.py  economika_noticias.bat  generator.py  main.py  memory_log.md  publisher.py  pyproject.toml  pytest.ini  requirements-server.txt  requirements.txt  scraper.py  server.py  subtitler.py  test_health.py  viral_scout.py  x.com_cookies.txt  youtube_token.pickle
_archive/: README.md
app/: main.py  settings.py
config/: accounts.example.yaml  accounts.json话题部  cookie_utils.py  news_sources.json  settings.example.yaml  x.com_cookies.json  x_accounts.json  x_internal.example.yaml
core/: ai_handler.py  downloader.py  generator.py  image_gen.py  publisher.py  scraper.py  subtitler.py  viral_scout.py  youtube_uploader.py
docs/: ANALISIS_PROYECTO.md  DEVELOPER.md  GUIA_API_INSTAGRAM.md  GUIA_YOUTUBE_SHORTS.md  RENDER_DEPLOY.md  TODO_List.md  USER_GUIDE.md  approved_media_bundle.md  daily_workflow.md  dashboard.md  engineering_quality.md  local_pipeline_runner.md  manual_publish_status.md  pipeline_report.md  preview_reel.md  publish_queue.md  publish_queue_manifest.md  render_input_contract.md  render_manifest.md  text_card_renderer.md  video_export.md  video_manifest.md  x_ingestion_adapter.md  x_to_reel_mvp.md
prompts/: editorial_system.txt  system_instruction.md
samples/: x_posts_sample.json
scratch/: debug_wolverine.py  raw_x_debug.py
scripts/: build_approved_bundle_index.py  build_approved_media_bundle.py  build_pipeline_report.py  build_publish_queue.py  build_publish_queue_manifest.py  build_render_inputs.py  build_render_manifest.py  build_video_manifest.py  create_x_headers_file.py  create_x_probe_env.ps1  export_card_videos.py  (+14 more)
(+204 files in other folders)
