[project]
name = "economica-news"
version = "0.1.0"
description = "Clean post-wipe skeleton for Economica News."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "pillow>=10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools]
packages = ["app", "app.config", "app.dashboard", "app.ingestion", "app.storage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.coverage.run]
source = ["app", "scripts"]
omit = [
    "tests/*",
    "runtime/*",
]

[tool.coverage.report]
show_missing = true
